--- a/css/main.css
+++ b/css/main.css
@@ -5,12 +5,12 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #F0F1DF;
 
 }
 
 .header{
-    background-color: #099d8d;
+    background-color: #F06A8A;
     height: 150px;
     margin: auto;
     display: flex;
@@ -74,7 +74,7 @@ h1 {
 
 .add-task-btn {
     padding: 10px 20px;
-    background-color: #14d9c4;
+    background-color: #8FBDDF;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -108,6 +108,9 @@ li button {
     cursor: pointer;
 }
 
-.tachado{
+.done{
     text-decoration: line-through;
+    background-color: #A6A6A6 ;
 }
+
+/* https://color.adobe.com/es/explore?page=2 */
