--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,10 @@ h1 {
     cursor: pointer;
     font-size: 16px;
 }
+.bounce-in-top {
+	-webkit-animation: bounce-in-top 1.1s both;
+	        animation: bounce-in-top 1.1s both;
+}
 
 ul {
     list-style-type: none;
