--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,8 @@ body {
 }
 
 .container {
-    max-width: 600px;
+    width: 80%;
+    max-width: 768px;
     margin: 0 auto;
     padding: 20px;
     margin-top: 30px;
@@ -73,11 +74,55 @@ h1 {
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    min-width: 25%;
+ 
 }
-.bounce-in-top {
-	-webkit-animation: bounce-in-top 1.1s both;
-	        animation: bounce-in-top 1.1s both;
-}
+
+@keyframes bounce-in-top {
+ 
+    0% {
+      transform: translateY(-500px);
+      animation-timing-function: ease-in;
+      opacity: 0;
+    }
+    38% {
+      transform: translateY(0);
+      animation-timing-function: ease-out;
+      opacity: 1;
+    }
+    55% {
+      transform: translateY(-65px);
+      animation-timing-function: ease-in;
+    }
+    72% {
+      transform: translateY(0);
+      animation-timing-function: ease-out;
+    }
+    81% {
+      transform: translateY(-28px);
+      animation-timing-function: ease-in;
+    }
+    90% {
+      transform: translateY(0);
+      animation-timing-function: ease-out;
+    }
+    95% {
+      transform: translateY(-8px);
+      animation-timing-function: ease-in;
+    }
+    100% {
+      transform: translateY(0);
+      animation-timing-function: ease-out;
+    }
+  }
+  
+  .bounce-in-top {
+    animation: bounce-in-top 1s both;
+  }
+  
+
+
+
 
 ul {
     list-style-type: none;
@@ -111,3 +156,4 @@ li button {
 }
 
 /* https://color.adobe.com/es/explore?page=2 */
+/*
