--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ body {
     width: 80%;
     max-width: 768px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 24px;
     margin-top: 30px;
     background-color: #fff;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -154,6 +154,12 @@ li {
 .done{
     text-decoration: line-through;
     background-color: #A6A6A6 ;
+}
+.errortext{
+  font-size: 14px;
+  color: #F48E35;
+  padding: 5px;
+
 }
 
 /* https://color.adobe.com/es/explore?page=2 */
