--- a/css/main.css
+++ b/css/main.css
@@ -1,144 +1,135 @@
-*{
-    margin: 0px;
-    padding: 0px;
+* {
+  margin: 0px;
+  padding: 0px;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #F0F1DF;
-
+  font-family: Arial, sans-serif;
+  background-color: #f0f1df;
 }
 
-.header{
-    background-color: #F06A8A;
-    height: 150px;
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.header {
+  background-color: #f06a8a;
+  height: 150px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.title{
-    color: white;
-    text-align: center;
+.title {
+  color: white;
+  text-align: center;
 }
 
 .container {
-    width: 80%;
-    max-width: 768px;
-    margin: 0 auto;
-    padding: 24px;
-    margin-top: 30px;
-    background-color: #fff;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
+  width: 80%;
+  max-width: 768px;
+  margin: 0 auto;
+  padding: 24px;
+  margin-top: 30px;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
 }
 
-
-
-.main{
-    display: flex;
-    width: 800px;
-    flex-direction: row;
-    gap: 20px;
-    justify-content: center;
-    text-align: center;
-    margin: auto;
+.main {
+  display: flex;
+  width: 800px;
+  flex-direction: row;
+  gap: 20px;
+  justify-content: center;
+  text-align: center;
+  margin: auto;
 }
 
 h1 {
-    text-align: center;
+  text-align: center;
 }
 
 .task-form {
-    display: flex;
-    margin-bottom: 20px;
-    gap:10px;
+  display: flex;
+  margin-bottom: 20px;
+  gap: 10px;
 }
 
-
-
 .task-input {
-    flex: 1;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
+  flex: 1;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
 }
 
 .add-task-btn {
-    padding: 10px 20px;
-    background-color: #8FBDDF;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    min-width: 25%;
- 
+  padding: 10px 20px;
+  background-color: #8fbddf;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  min-width: 25%;
 }
 
-
 @keyframes bounce-in-top {
- 
-    0% {
-      transform: translateY(-500px);
-      animation-timing-function: ease-in;
-      opacity: 0;
-    }
-    38% {
-      transform: translateY(0);
-      animation-timing-function: ease-out;
-      opacity: 1;
-    }
-    55% {
-      transform: translateY(-65px);
-      animation-timing-function: ease-in;
-    }
-    72% {
-      transform: translateY(0);
-      animation-timing-function: ease-out;
-    }
-    81% {
-      transform: translateY(-28px);
-      animation-timing-function: ease-in;
-    }
-    90% {
-      transform: translateY(0);
-      animation-timing-function: ease-out;
-    }
-    95% {
-      transform: translateY(-8px);
-      animation-timing-function: ease-in;
-    }
-    100% {
-      transform: translateY(0);
-      animation-timing-function: ease-out;
-    }
+  0% {
+    transform: translateY(-500px);
+    animation-timing-function: ease-in;
+    opacity: 0;
   }
-  
-  .bounce-in-top {
-    animation: bounce-in-top 1s both;
+  38% {
+    transform: translateY(0);
+    animation-timing-function: ease-out;
+    opacity: 1;
   }
-  
+  55% {
+    transform: translateY(-65px);
+    animation-timing-function: ease-in;
+  }
+  72% {
+    transform: translateY(0);
+    animation-timing-function: ease-out;
+  }
+  81% {
+    transform: translateY(-28px);
+    animation-timing-function: ease-in;
+  }
+  90% {
+    transform: translateY(0);
+    animation-timing-function: ease-out;
+  }
+  95% {
+    transform: translateY(-8px);
+    animation-timing-function: ease-in;
+  }
+  100% {
+    transform: translateY(0);
+    animation-timing-function: ease-out;
+  }
+}
+
+.bounce-in-top {
+  animation: bounce-in-top 1s both;
+}
 
 ul {
-    list-style-type: none;
-    padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 
 li {
-    display: flex;
-    justify-content: flex-start;
-    text-align: left;
-    gap: 5px;
-    align-items: center;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    background-color: #fff;
-    position: relative;
+  display: flex;
+  justify-content: flex-start;
+  text-align: left;
+  gap: 5px;
+  align-items: center;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  background-color: #fff;
+  position: relative;
 }
 ul li:hover,
 .done {
@@ -146,32 +137,25 @@ ul li:hover,
 }
 
 .deleteBtn {
-    background-color: #F48E35;
-    color: #fff;
-    padding: 5px 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    position: absolute;
-    right: 6px;
-    
-   
+  background-color: #f48e35;
+  color: #fff;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  position: absolute;
+  right: 6px;
 }
-
 
 .done .text {
   text-decoration: line-through;
 }
 
-.errortext{
+.errortext {
   font-size: 14px;
-  color: #F48E35;
+  color: #f48e35;
   padding: 5px;
-
 }
-
-
-
 
 .material-checkbox {
   display: flex;
@@ -179,7 +163,7 @@ ul li:hover,
   cursor: pointer;
 }
 
-.material-checkbox input[type="checkbox"] {
+.material-checkbox input[type='checkbox'] {
   position: absolute;
   opacity: 0;
   width: 0;
@@ -197,13 +181,13 @@ ul li:hover,
   transition: all 0.3s;
 }
 
-.material-checkbox input[type="checkbox"]:checked ~ .checkmark {
+.material-checkbox input[type='checkbox']:checked ~ .checkmark {
   background-color: #c6d51a;
-  border-color: #c6d51a ;
+  border-color: #c6d51a;
 }
 
-.material-checkbox input[type="checkbox"]:checked ~ .checkmark:after {
-  content: "";
+.material-checkbox input[type='checkbox']:checked ~ .checkmark:after {
+  content: '';
   position: absolute;
   top: 2px;
   left: 6px;
@@ -214,20 +198,19 @@ ul li:hover,
   transform: rotate(45deg);
 }
 
-.material-checkbox input[type="checkbox"]:focus ~ .checkmark {
+.material-checkbox input[type='checkbox']:focus ~ .checkmark {
   box-shadow: 0 0 0 2px #dfec5065;
 }
 
-.material-checkbox:hover input[type="checkbox"] ~ .checkmark {
-  border-color: #C3CF34;
+.material-checkbox:hover input[type='checkbox'] ~ .checkmark {
+  border-color: #c3cf34;
 }
 
-.material-checkbox input[type="checkbox"]:disabled ~ .checkmark {
+.material-checkbox input[type='checkbox']:disabled ~ .checkmark {
   opacity: 0.5;
   cursor: not-allowed;
 }
 
-.material-checkbox input[type="checkbox"]:disabled ~ .checkmark:hover {
+.material-checkbox input[type='checkbox']:disabled ~ .checkmark:hover {
   border-color: #4d4d4d;
 }
-
